l22/l22_parser.output
Terminals unused in grammar

    tREAD
    tTYPE_POINTER
    tTYPE_AUTO
    tPRIVATE


State 22 conflicts: 21 shift/reduce, 1 reduce/reduce
State 31 conflicts: 33 reduce/reduce
State 60 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 64 conflicts: 3 shift/reduce
State 65 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 86 conflicts: 3 shift/reduce
State 99 conflicts: 1 shift/reduce
State 133 conflicts: 32 reduce/reduce
State 145 conflicts: 48 reduce/reduce
State 200 conflicts: 3 reduce/reduce
State 218 conflicts: 3 reduce/reduce


Grammar

    0 $accept: file $end

    1 file: %empty
    2     | declarations

    3 declarations: declaration
    4             | declarations declaration

    5 declaration: vardec
    6            | fundef
    7            | fundec
    8            | program

    9 fundec: tFOREIGN data_type tIDENTIFIER
   10       | data_type tIDENTIFIER
   11       | tUSE data_type tIDENTIFIER

   12 fundeff: '(' argdecs ')' '-' '>' data_type ':' block

   13 fundef: identifiers tIDENTIFIER '=' fundeff

   14 vardec: identifiers data_type tIDENTIFIER opt_initializer
   15       | data_type tIDENTIFIER opt_initializer
   16       | identifiers tIDENTIFIER opt_initializer

   17 opt_initializer: %empty
   18                | '=' expr

   19 identifiers: tVAR
   20            | tPUBLIC

   21 program: tBEGIN block tEND

   22 block: '{' opt_instructions '}'
   23      | '{' opt_vardecs opt_instructions '}'

   24 opt_vardecs: %empty
   25            | vardecs

   26 opt_instructions: %empty
   27                 | instructions

   28 vardecs: vardec ';'
   29        | vardec
   30        | fundef
   31        | fundec ';'
   32        | vardecs vardec ';'
   33        | vardecs fundec ';'
   34        | vardecs vardec
   35        | vardecs fundef
   36        | vardecs fundec

   37 instructions: stmt
   38             | instructions stmt

   39 argdecs: %empty
   40        | argdec
   41        | argdecs ',' argdec

   42 argdec: data_type tIDENTIFIER

   43 data_type: basic_type
   44          | function_type

   45 basic_type: tTYPE_STRING
   46           | tTYPE_INT
   47           | tTYPE_REAL
   48           | tTYPE_VOID
   49           | '[' data_type ']'

   50 function_type: data_type '<' data_types '>'
   51              | data_type '<' '>'

   52 data_types: data_type
   53           | data_types ',' data_type

   54 stmt: expr ';'
   55     | expr
   56     | tIF expr tTHEN block
   57     | tIF expr tTHEN block elif
   58     | tWHILE '(' expr ')' tDO block
   59     | tSTOP ';'
   60     | tAGAIN ';'
   61     | tINPUT ';'
   62     | tRETURN expr ';'
   63     | tRETURN expr
   64     | tELSE stmt
   65     | tWRITE expressions ';'
   66     | tWRITELN expressions ';'
   67     | rec_fun_cal ';'

   68 funcal_exr: expr
   69           | fundef
   70           | '(' expr ')'
   71           | '(' fundef ')'
   72           | funcal_exr ',' fundef
   73           | funcal_exr ',' expr
   74           | funcal_exr ',' '(' fundef ')'
   75           | funcal_exr ',' '(' expr ')'
   76           | funcal_exr '(' expr ')'

   77 rec_fun_cal: '@' '(' funcal_exr ')'
   78            | '@' '(' ')'

   79 elif: tELSE block
   80     | tELIF expr tTHEN block
   81     | tELIF expr tTHEN block elif

   82 expressions: expr
   83            | expressions ',' expr

   84 expr: integer
   85     | real
   86     | string
   87     | tNULLPTR
   88     | tNOT expr
   89     | tSIZEOF '(' expr ')'
   90     | '[' expr ']'
   91     | lval '=' expr
   92     | '-' '-' expr
   93     | '-' expr
   94     | '+' expr
   95     | expr '+' expr
   96     | '(' fundeff ')' expr
   97     | fundeff
   98     | expr '-' expr
   99     | expr '*' expr
  100     | expr '/' expr
  101     | expr '%' expr
  102     | expr '<' expr
  103     | expr '>' expr
  104     | expr tGE expr
  105     | expr tLE expr
  106     | expr tNE expr
  107     | expr tEQ expr
  108     | expr tAND expr
  109     | expr tOR expr
  110     | '(' expr ')'
  111     | lval
  112     | lval '?'
  113     | lval '(' funcal_exr ')'
  114     | lval '(' ')'
  115     | rec_fun_cal

  116 lval: tIDENTIFIER
  117     | expr '[' expr ']'

  118 integer: tINTEGER

  119 real: tREAL

  120 string: tSTRING
  121       | string tSTRING


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 101
    '(' (40) 12 58 70 71 74 75 76 77 78 89 96 110 113 114
    ')' (41) 12 58 70 71 74 75 76 77 78 89 96 110 113 114
    '*' (42) 99
    '+' (43) 94 95
    ',' (44) 41 53 72 73 74 75 83
    '-' (45) 12 92 93 98
    '/' (47) 100
    ':' (58) 12
    ';' (59) 28 31 32 33 54 59 60 61 62 65 66 67
    '<' (60) 50 51 102
    '=' (61) 13 18 91
    '>' (62) 12 50 51 103
    '?' (63) 112
    '@' (64) 77 78
    '[' (91) 49 90 117
    ']' (93) 49 90 117
    '{' (123) 22 23
    '}' (125) 22 23
    error (256)
    tINTEGER <i> (258) 118
    tREAL <d> (259) 119
    tAND (260) 108
    tOR (261) 109
    tNE (262) 106
    tLE (263) 105
    tGE (264) 104
    tSIZEOF (265) 89
    tNOT (266) 88
    tWHILE (267) 58
    tREAD (268)
    tBEGIN (269) 21
    tEND (270) 21
    tTYPE_STRING (271) 45
    tTYPE_INT (272) 46
    tTYPE_REAL (273) 47
    tTYPE_POINTER (274)
    tTYPE_AUTO (275)
    tTYPE_VOID (276) 48
    tRETURN (277) 62 63
    tPUBLIC (278) 20
    tUSE (279) 11
    tFOREIGN (280) 9
    tPRIVATE (281)
    tVAR (282) 19
    tDO (283) 58
    tSTOP (284) 59
    tAGAIN (285) 60
    tIF (286) 56 57
    tTHEN (287) 56 57 80 81
    tELIF (288) 80 81
    tELSE (289) 64 79
    tINPUT (290) 61
    tWRITE (291) 65
    tWRITELN (292) 66
    tIDENTIFIER <s> (293) 9 10 11 13 14 15 16 42 116
    tSTRING <s> (294) 120 121
    tNULLPTR <expression> (295) 87
    tEQ (296) 107
    tUNARY (297)


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    file <sequence> (63)
        on left: 1 2
        on right: 0
    declarations <sequence> (64)
        on left: 3 4
        on right: 2 4
    declaration <node> (65)
        on left: 5 6 7 8
        on right: 3 4
    fundec <node> (66)
        on left: 9 10 11
        on right: 7 31 33 36
    fundeff <expression> (67)
        on left: 12
        on right: 13 96 97
    fundef <node> (68)
        on left: 13
        on right: 6 30 35 69 71 72 74
    vardec <node> (69)
        on left: 14 15 16
        on right: 5 28 29 32 34
    opt_initializer <expression> (70)
        on left: 17 18
        on right: 14 15 16
    identifiers <i> (71)
        on left: 19 20
        on right: 13 14 16
    program <node> (72)
        on left: 21
        on right: 8
    block <block> (73)
        on left: 22 23
        on right: 12 21 56 57 58 79 80 81
    opt_vardecs <sequence> (74)
        on left: 24 25
        on right: 23
    opt_instructions <sequence> (75)
        on left: 26 27
        on right: 22 23
    vardecs <sequence> (76)
        on left: 28 29 30 31 32 33 34 35 36
        on right: 25 32 33 34 35 36
    instructions <sequence> (77)
        on left: 37 38
        on right: 27 38
    argdecs <sequence> (78)
        on left: 39 40 41
        on right: 12 41
    argdec <node> (79)
        on left: 42
        on right: 40 41
    data_type <type> (80)
        on left: 43 44
        on right: 9 10 11 12 14 15 42 49 50 51 52 53
    basic_type <type> (81)
        on left: 45 46 47 48 49
        on right: 43
    function_type <type> (82)
        on left: 50 51
        on right: 44
    data_types <types> (83)
        on left: 52 53
        on right: 50 53
    stmt <node> (84)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 37 38 64
    funcal_exr <sequence> (85)
        on left: 68 69 70 71 72 73 74 75 76
        on right: 72 73 74 75 76 77 113
    rec_fun_cal <expression> (86)
        on left: 77 78
        on right: 67 115
    elif <node> (87)
        on left: 79 80 81
        on right: 57 81
    expressions <sequence> (88)
        on left: 82 83
        on right: 65 66 83
    expr <expression> (89)
        on left: 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115
        on right: 18 54 55 56 57 58 62 63 68 70 73 75 76 80 81 82 83 88 89 90 91 92 93 94 95 96 98 99 100 101 102 103 104 105 106 107 108 109 110 117
    lval <lvalue> (90)
        on left: 116 117
        on right: 91 111 112 113 114
    integer <expression> (91)
        on left: 118
        on right: 84
    real <expression> (92)
        on left: 119
        on right: 85
    string <s> (93)
        on left: 120 121
        on right: 86 121


State 0

    0 $accept: . file $end

    tBEGIN        shift, and go to state 1
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    tPUBLIC       shift, and go to state 6
    tUSE          shift, and go to state 7
    tFOREIGN      shift, and go to state 8
    tVAR          shift, and go to state 9
    '['           shift, and go to state 10

    $default  reduce using rule 1 (file)

    file           go to state 11
    declarations   go to state 12
    declaration    go to state 13
    fundec         go to state 14
    fundef         go to state 15
    vardec         go to state 16
    identifiers    go to state 17
    program        go to state 18
    data_type      go to state 19
    basic_type     go to state 20
    function_type  go to state 21


State 1

   21 program: tBEGIN . block tEND

    '{'  shift, and go to state 22

    block  go to state 23


State 2

   45 basic_type: tTYPE_STRING .

    $default  reduce using rule 45 (basic_type)


State 3

   46 basic_type: tTYPE_INT .

    $default  reduce using rule 46 (basic_type)


State 4

   47 basic_type: tTYPE_REAL .

    $default  reduce using rule 47 (basic_type)


State 5

   48 basic_type: tTYPE_VOID .

    $default  reduce using rule 48 (basic_type)


State 6

   20 identifiers: tPUBLIC .

    $default  reduce using rule 20 (identifiers)


State 7

   11 fundec: tUSE . data_type tIDENTIFIER

    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    '['           shift, and go to state 10

    data_type      go to state 24
    basic_type     go to state 20
    function_type  go to state 21


State 8

    9 fundec: tFOREIGN . data_type tIDENTIFIER

    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    '['           shift, and go to state 10

    data_type      go to state 25
    basic_type     go to state 20
    function_type  go to state 21


State 9

   19 identifiers: tVAR .

    $default  reduce using rule 19 (identifiers)


State 10

   49 basic_type: '[' . data_type ']'

    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    '['           shift, and go to state 10

    data_type      go to state 26
    basic_type     go to state 20
    function_type  go to state 21


State 11

    0 $accept: file . $end

    $end  shift, and go to state 27


State 12

    2 file: declarations .
    4 declarations: declarations . declaration

    tBEGIN        shift, and go to state 1
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    tPUBLIC       shift, and go to state 6
    tUSE          shift, and go to state 7
    tFOREIGN      shift, and go to state 8
    tVAR          shift, and go to state 9
    '['           shift, and go to state 10

    $default  reduce using rule 2 (file)

    declaration    go to state 28
    fundec         go to state 14
    fundef         go to state 15
    vardec         go to state 16
    identifiers    go to state 17
    program        go to state 18
    data_type      go to state 19
    basic_type     go to state 20
    function_type  go to state 21


State 13

    3 declarations: declaration .

    $default  reduce using rule 3 (declarations)


State 14

    7 declaration: fundec .

    $default  reduce using rule 7 (declaration)


State 15

    6 declaration: fundef .

    $default  reduce using rule 6 (declaration)


State 16

    5 declaration: vardec .

    $default  reduce using rule 5 (declaration)


State 17

   13 fundef: identifiers . tIDENTIFIER '=' fundeff
   14 vardec: identifiers . data_type tIDENTIFIER opt_initializer
   16       | identifiers . tIDENTIFIER opt_initializer

    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    tIDENTIFIER   shift, and go to state 29
    '['           shift, and go to state 10

    data_type      go to state 30
    basic_type     go to state 20
    function_type  go to state 21


State 18

    8 declaration: program .

    $default  reduce using rule 8 (declaration)


State 19

   10 fundec: data_type . tIDENTIFIER
   15 vardec: data_type . tIDENTIFIER opt_initializer
   50 function_type: data_type . '<' data_types '>'
   51              | data_type . '<' '>'

    tIDENTIFIER  shift, and go to state 31
    '<'          shift, and go to state 32


State 20

   43 data_type: basic_type .

    $default  reduce using rule 43 (data_type)


State 21

   44 data_type: function_type .

    $default  reduce using rule 44 (data_type)


State 22

   22 block: '{' . opt_instructions '}'
   23      | '{' . opt_vardecs opt_instructions '}'

    tINTEGER      shift, and go to state 33
    tREAL         shift, and go to state 34
    tSIZEOF       shift, and go to state 35
    tNOT          shift, and go to state 36
    tWHILE        shift, and go to state 37
    tTYPE_STRING  shift, and go to state 2
    tTYPE_INT     shift, and go to state 3
    tTYPE_REAL    shift, and go to state 4
    tTYPE_VOID    shift, and go to state 5
    tRETURN       shift, and go to state 38
    tPUBLIC       shift, and go to state 6
    tUSE          shift, and go to state 7
    tFOREIGN      shift, and go to state 8
    tVAR          shift, and go to state 9
    tSTOP         shift, and go to state 39
    tAGAIN        shift, and go to state 40
    tIF           shift, and go to state 41
    tELSE         shift, and go to state 42
    tINPUT        shift, and go to state 43
    tWRITE        shift, and go to state 44
    tWRITELN      shift, and go to state 45
    tIDENTIFIER   shift, and go to state 46
    tSTRING       shift, and go to state 47
    tNULLPTR      shift, and go to state 48
    '+'           shift, and go to state 49
    '-'           shift, and go to state 50
    '['           shift, and go to state 51
    '('           shift, and go to state 52
    '@'           shift, and go to state 53

    tINTEGER     [reduce using rule 24 (opt_vardecs)]
    tREAL        [reduce using rule 24 (opt_vardecs)]
    tSIZEOF      [reduce using rule 24 (opt_vardecs)]
    tNOT         [reduce using rule 24 (opt_vardecs)]
    tWHILE       [reduce using rule 24 (opt_vardecs)]
    tRETURN      [reduce using rule 24 (opt_vardecs)]
    tSTOP        [reduce using rule 24 (opt_vardecs)]
    tAGAIN       [reduce using rule 24 (opt_vardecs)]
    tIF          [reduce using rule 24 (opt_vardecs)]
    tELSE        [reduce using rule 24 (opt_vardecs)]
    tINPUT       [reduce using rule 24 (opt_vardecs)]
    tWRITE       [reduce using rule 24 (opt_vardecs)]
    tWRITELN     [reduce using rule 24 (opt_vardecs)]
    tIDENTIFIER  [reduce using rule 24 (opt_vardecs)]
    tSTRING      [reduce using rule 24 (opt_vardecs)]
    tNULLPTR     [reduce using rule 24 (opt_vardecs)]
    '+'          [reduce using rule 24 (opt_vardecs)]
    '-'          [reduce using rule 24 (opt_vardecs)]
    '['          [reduce using rule 24 (opt_vardecs)]
    '('          [reduce using rule 24 (opt_vardecs)]
    '}'          reduce using rule 24 (opt_vardecs)
    '}'          [reduce using rule 26 (opt_instructions)]
    '@'          [reduce using rule 24 (opt_vardecs)]
    $default     reduce using rule 24 (opt_vardecs)

    fundec            go to state 54
    fundeff           go to state 55
    fundef            go to state 56
    vardec            go to state 57
    identifiers       go to state 17
    opt_vardecs       go to state 58
    opt_instructions  go to state 59
    vardecs           go to state 60
    instructions      go to state 61
    data_type         go to state 19
    basic_type        go to state 20
    function_type     go to state 21
    stmt              go to state 62
    rec_fun_cal       go to state 63
    expr              go to state 64
    lval              go to state 65
    integer           go to state 66
    real              go to state 67
    string            go to state 68


State 23

   21 program: tBEGIN block . tEND

    tEND  shift, and go to state 69


State 24

   11 fundec: tUSE data_type . tIDENTIFIER
   50 function_type: data_type . '<' data_types '>'
   51              | data_type . '<' '>'

    tIDENTIFIER  shift, and go to state 70
    '<'          shift, and go to state 32


State 25

    9 fundec: tFOREIGN data_type . tIDENTIFIER
   50 function_type: data_type . '<' data_types '>'
   51              | data_type . '<' '>'

    tIDENTIFIER  shift, and go to state 71
    '<'          shift, and go to state 32


State 26

   49 basic_type: '[' data_type . ']'
   50 function_type: data_type . '<' data_types '>'
   51              | data_type . '<' '>'

    '<'  shift, and go to state 32
    ']'  shift, and go to state 72


State 27

    0 $accept: file $end .

    $default  accept


State 28

    4 declarations: declarations declaration .

    $default  reduce using rule 4 (declarations)


State 29

   13 fundef: identifiers tIDENTIFIER . '=' fundeff
   16 vardec: identifiers tIDENTIFIER . opt_initializer

    '='  shift, and go to state 73

    $default  reduce using rule 17 (opt_initializer)

    opt_initializer  go to state 74


State 30

   14 vardec: identifiers data_type . tIDENTIFIER opt_initializer
   50 function_type: data_type . '<' data_types '>'
   51              | data_type . '<' '>'

    tIDENTIFIER  shift, and go to state 75
    '<'          shift, and go to state 32


State 31

   10 fundec: data_type tIDENTIFIER .
   15 vardec: data_type tIDENTIFIER . opt_initializer

    '='  shift, and go to state 76
